--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1>Калейдоскоп відкриттів</h1>
 	<p class="r">Мовчан Єгор (<a href="Візитка.html"> Детальніше</a>)<br>
 		<a href="Визначні мореплавці.html">Визначні мореплавці</a><br>
-		<a href="Визначні відкриття.html">Визначні відкриття</a>
+		<a href="Визначні відкриття.html">Визначні відкриття</a><br>
 		<a href="Рейтинг мов.html">Топ мов програмування</a></p>
 </body>
 </html>
