--- a/my11class.html
+++ b/my11class.html
@@ -5,18 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мій 11 клас</title>
+    <style>
+      @media screen and (max-width:900px){
+          .mid{
+            flex-direction: column;
+          }
+          .top{
+            align-items: center;
+            flex-direction: column;
+          }
+          .gallery{ 
+            border-left: 10px black dashed;
+            border-right: 10px black dashed;
+            border-top: none;
+            border-bottom: none;
+            flex-direction: column;
+            align-items: center;
+          }
+      }
+      @media screen and (max-width:576px){
+          .footer{
+            flex-direction: column;
+            margin: 0px;
+          }
+      }
+    </style>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
     <link rel="stylesheet" href="final.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-</head>
+    <script>
+      col=prompt("Оберіть кольорову гамму: 1-чорно-біла; 2-сіро-бежевий; 3-у синіх тонах", "Введіть цифру"); 
+      if (col==1){
+        $(function() {
+                  $(".wrapg").css("border", "20px white solid");
+                  $(".wrapg").css("background-color", "white");
+                  $(".top").css("background-color", "black");
+                  $(".cl11").css("color", "white");
+                  $(".mid-top").css("background-color", "white");
+                  $(".p").css("color", "black");
+                  $(".cardim").css("background-color", "white");
+                  $(".card-body").css("background-color", "white");
+                  $(".footer").css("background-color", "black");
+        });
+     }
+    if (col==3){
+      $(function() {
+                  $(".wrapg").css("background-color", "navy");
+                  $(".wrapg").css("border", "20px navy solid");
+                  $(".top").css("background-color", "navy");
+                  $(".cl11").css("color", "LightSkyBlue");
+                  $(".mid-top").css("background-color", "CornflowerBlue");
+                  $(".p").css("color", "DarkBlue");
+                  $(".cardim").css("background-color", "CadetBlue");
+                  $(".card-body").css("background-color", "CadetBlue");
+                  $(".footer").css("background-color", "MidnightBlue");
+                  
+        });
+    }
+    </script>
+  </head>
 <body>
     <div class="top">
         <p class="cl11">11 класс</p>
         <p class="cl11">2020p.-2021p.</p>
     </div>
     <div class="mid-top">
-        <div class="p">
-        <p>Ось-ось закінчиться школа і нам потрібно буде йти у суворий світ. <br> Незважаючи на карантин останній рік все ж таки був насиченим на емоції.</p>
-        </div>
+        <p class="p">Ось-ось закінчиться школа і нам потрібно буде йти у суворий світ. <br> Незважаючи на карантин останній рік все ж таки був насиченим на емоції.</p>
     </div>
     <div class="mid">
         <div class="card-group">
@@ -29,7 +86,7 @@
                 <p class="card-text">Хоча 11 клас і є останнім і мабуть найвідповідльнішим я все ж таки не так багато часу приділяв школі.</p>
               </div>
               <div class="card-footer">
-                <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</small>
+                <a href="myimpression.html" target="_blank">  <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</a> </small>
               </div>
             </div>
             <div class="card">
@@ -44,6 +101,8 @@
                 <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</small>
               </div>
             </div>
+            </div>
+            <div class="card-group">
             <div class="card">
               <div class="cardim">
                 <img src="3.jpg" class="cardimg" alt="...">
@@ -62,14 +121,39 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Я через рік</h5>
-                  <p class="card-text">Через три місяці починається новийетап мого життя і дуже цікаво, що мене чекає попереду.</p>
+                  <p class="card-text">Через три місяці починається новий етап мого життя і дуже цікаво, що мене чекає попереду.</p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</small>
                 </div>
               </div>
-          </div>
-    </div> 
-
+          </div> 
+        </div>
+    </div>
+    <div class="mid-top">
+      <p class="p">Для того щоб ви більше дізналися як я провів свій навчальний рік ви можете подивитися фотографії. <br> &#8659;&#8659;&#8659;</p>
+    </div>
+    <!--Реалізація наступного фотоальбому взята з сайту https://s-sd.ru/blog_studio_design/fotoalbom_na_chistom_css3/ -->
+    <div class="wrapg">
+    <div class="gallery">
+      <a tabindex="1"><img src="pa1.jpg" class="pa"></a>
+      <a tabindex="1"><img src="pa2.jpg" class="pa"></a>
+      <a tabindex="1"><img src="pa3.jpg" class="pa"></a>
+      <a tabindex="1"><img src="pa4.jpg" class="pa"></a>
+      <a tabindex="1"><img src="pa9.jpg" class="pa"></a>
+      </div>  
+    <div class="gallery">
+      <a tabindex="1"><img src="pa5.jpg" class="pa"></a>
+      <a tabindex="1"><img src="pa6.jpg" class="pa"></a>
+      <a tabindex="1"><img src="pa7.jpg" class="pa"></a>
+      <a tabindex="1"><img src="pa8.jpg" class="pa"></a>
+      <a tabindex="1"><img src="pa11.jpg" class="pa"></a>
+    </div>
+  </div>
+    <div class="footer">
+      <div class="a"><a href="https://www.instagram.com/egormov21/" target="_blank">Inst:<img src="https://pngicon.ru/file/uploads/instagram.png" alt=""></div></a>
+      <div class="a"><a href="https://twitter.com/kxlz4ugnr2xglmu" target="_blank">Twitter:<img src="https://img.icons8.com/color/452/twitter--v1.png" alt=""></div></a>
+      <div class="a"><a href="https://t.me/addstickers/Chtobilod" target="_blank"> Telegram:<img src="https://pngicon.ru/file/uploads/telegram.png" alt=""></div></a>
+    </div>
 </body>
 </html>
