--- a/my11class.html
+++ b/my11class.html
@@ -98,7 +98,7 @@
                 <p class="card-text">Більшість свого дозвілля я приділяв друзям, а також саморозвитку.</p>
               </div>
               <div class="card-footer">
-                <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</small>
+                <a href="myleisure.html" target="_blank"> <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</a></small>
               </div>
             </div>
             </div>
@@ -108,11 +108,11 @@
                 <img src="3.jpg" class="cardimg" alt="...">
                 </div>
               <div class="card-body">
-                <h5 class="card-title">Мої знайомства</h5>
+                <h5 class="card-title">Мої друзі</h5>
                 <p class="card-text">Цей рік видався дуже насиченим на нові знайомства, я познайомився з багатьм людьми з паралельних класів.</p>
               </div>
               <div class="card-footer">
-                <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</small>
+                <a href="myfriends.html" target="_blank"> <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</a></small>
               </div>
             </div>
             <div class="card">
@@ -124,7 +124,7 @@
                   <p class="card-text">Через три місяці починається новий етап мого життя і дуже цікаво, що мене чекає попереду.</p>
                 </div>
                 <div class="card-footer">
-                  <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</small>
+                  <a href="myfuture.html" target="_blank"> <small class="text-muted">Натисни тут щоб дізнатися більше &raquo;</a></small>
                 </div>
               </div>
           </div> 
