--- a/myfriends.html
+++ b/myfriends.html
@@ -116,7 +116,7 @@
       <div class="row featurette" style="width: 100%; display: flex; justify-content: space-between;">
         <div class="col-md-7">
           <h2 class="featurette-heading">Но это по испански</h2>
-          <p class="lead">Я багато спілкуюся і з друзями з класу та провожу з ними багато часу.</p>
+          <p class="lead">Крім того я багато спілкуюся і з друзями з класу та провожу з ними багато часу.</p>
         </div>
         <div class="col-md-5">
           <img src="fr3.jpg" alt="" width="100%" height="300px">
