--- a/maze.html
+++ b/maze.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="wall.css">
     <title>Document</title>
     <style>
+        body{
+            margin: 0px;
+        }
         .g{
             transform:  rotate(270deg);
             position: absolute;
@@ -159,6 +162,28 @@
             border: 2px rgb(124, 75, 114) double;
             background: rgb(88, 83, 83);
         }
+        .space{
+            height: 20px;
+        }   
+        .footer {
+            position: relative;
+            margin-bottom: 0px;
+            height: 100px;
+            background: black; /* Цвет фона */
+            color: #fff; /* Цвет текста */
+            width: 100%; /* Ширина слоя */
+            display: flex;
+            justify-content: space-around;
+            padding-top: 15px;
+        }
+        .adimg{ 
+            width: 20px;
+            height: 20px;
+        }
+        a{
+            text-decoration: none;
+            color: white;
+        }
     </style>
 
 </head>
@@ -184,6 +209,13 @@
         <div class="win">Congratulations!!! <br> You WIN!!!
             <div class="winok" onclick="cl()">Yippee!</div>
         </div>
+    </div>
+    <div class="space"></div>
+    <div class="footer">
+        <div class="ad"><a href="https://www.instagram.com/egormov21/" target="_blank"> Instagram: <img class="adimg" src="https://pngicon.ru/file/uploads/instagram.png" alt=""> </a></div>
+        <div class="ad"><a href="https://twitter.com/kxlz4uGnr2XGlMu?t=HUWDYU7NLmMtULt7PSafvw&s=09" target="_blank"> Twitter: <img class="adimg" src="https://cdn.pixabay.com/photo/2018/06/22/19/03/logo-3491390_960_720.png" alt=""></a></div>
+        <div class="ad"><a href="https://t.me/YehorMovchan" target="_blank"> Telegram: <img class="adimg" src="https://pngicon.ru/file/uploads/telegram-256x256.png" alt=""></a></div>
+        <div class="ad">Email: egormch21@gmail.com</div>
     </div>
 </body>
 <cont>
