--- a/maze.html
+++ b/maze.html
@@ -188,7 +188,7 @@
 
 </head>
 <body onload='main()'>
-    <h1>Maze</h1>
+    <h1>Назар лох обьелся блох</h1>
     <div class="full">
     <div class="main" id="main">
         <div class="g" id="g"> <img src="mouse.png" alt="" id="m"></div>
