--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 (response)=>{
                     if(response.status=200){
                         document.getElementById("info").innerHTML=response.json
+                        console.log(response)
                     }
                 }
             )
