--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
             fetch(request).then(
                 (response)=>{
                     if(response.status=200){
-                        document.getElementById("info").innerHTML=response.json
                         console.log(response)
                     }
                 }
-            )
+            ).then((data)=>document.getElementById("info").innerHTML=response.json)
         }
     </script>
 </head>
