--- a/fbs/index.html
+++ b/fbs/index.html
@@ -9,11 +9,10 @@
 <body>
     <table>
         <tr>
-            <td>Відвідування (діти)</td>
-            <td>Відвідування (діти статистика)</td>
-            <td>Відвідування (вчителі)</td>
-            <td>Відвідування (вчителі статистика)</td>
-            <td>Репетиторство</td>
+            <a href="attendance/kids/kids.html"><td>Відвідування (діти)</td></a>
+            <a href="attendance/kids/statistic/statistic.html"><td>Відвідування (діти статистика)</td></a>
+            <a href="attendance/teacher/statistic/teacher attendance.html"></a><td>Відвідування (вчителі)</td>
+            <a href="attendance/teacher/statistic/sum/teacher attendance sum.html"></a><td>Відвідування (вчителі статистика)</td>
 
         </tr>
     </table>
