--- a/fbs/index.html
+++ b/fbs/index.html
@@ -9,10 +9,10 @@
 <body>
     <table>
         <tr>
-            <a href="attendance/kids/kids.html"><td>Відвідування (діти)</td></a>
-            <a href="attendance/kids/statistic/statistic.html"><td>Відвідування (діти статистика)</td></a>
-            <a href="attendance/teacher/statistic/teacher attendance.html"></a><td>Відвідування (вчителі)</td>
-            <a href="attendance/teacher/statistic/sum/teacher attendance sum.html"></a><td>Відвідування (вчителі статистика)</td>
+            <td><a href="attendance/kids/kids.html">Відвідування (діти)</a></td>
+            <td><a href="attendance/kids/statistic/statistic.html">Відвідування (діти статистика)</a></td>
+            <td> <a href="attendance/teacher/statistic/teacher attendance.html">Відвідування (вчителі)</a></td>
+            <td><a href="attendance/teacher/statistic/sum/teacher attendance sum.html">Відвідування (вчителі статистика)</a></td>
 
         </tr>
     </table>
