--- a/fbs/attendance/teacher/statistic/sum/teacher attendance sum.html
+++ b/fbs/attendance/teacher/statistic/sum/teacher attendance sum.html
@@ -5,27 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Відвідування вчителів за місяць</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <style>
-        table{
-            border: 1px black solid;
-            border-collapse: collapse;
-        }
-        td{
-            border: 1px black solid;
-            border-collapse: collapse;
-            padding: 5px;
-        }
-        th{
-            border: 1px black solid;
-            padding: 5px;
-        }
-        tr{
-            border: 1px black solid;
-        }
-        tr:nth-child(odd){
-            background-color: rgb(226, 255, 255);
-        }
-    </style>
+    <link rel="stylesheet" href="../../../../static/style.css">
     <script src="script.js"></script>
 </head>
 <body onload="getData()">
