--- a/fbs/attendance/kids/kids.html
+++ b/fbs/attendance/kids/kids.html
@@ -6,6 +6,7 @@
     <title>Відвідування дітей</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="script.js"> </script>
+    <script src="../../static/script.js"></script>
     <link rel="stylesheet" href="../../static/style.css">
 </head>
 <body>
