--- a/iframe content/lessonAttendance.html
+++ b/iframe content/lessonAttendance.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Адміністрування школи</title>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <link rel="stylesheet" href="D:\Навчання\ДИПЛОМ\Front-end\static\style.css">
+        <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
         <script>
 
             $(document).ready(function() {
