--- a/iframe content/schedule.html
+++ b/iframe content/schedule.html
@@ -211,7 +211,7 @@
       });
     });
   </script>
-  <link rel="stylesheet" href="D:\Навчання\ДИПЛОМ\Front-end\static\style.css">
+  <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
   <style>
     table{
         width: 80%;
