--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     
     <main>
-        <iframe id="iframe-content" src="iframe content\kids.html" frameborder="0"></iframe>
+        <iframe id="iframe-content" src="" frameborder="0"></iframe>
     </main>
     
     <!-- <footer>
