--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         })
     })
     function changePage(el){
-        iframe.src = links[el.href];
+        iframe.src = links[el.hash];
     }
 
 </script>
