--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <nav>
             <ul>
                 <li><a href="#" onclick="changePage(this)">Головна</a></li>
-                <li><a href="#kids" onclick="changePage(this)">Учні</a></li>
-                <li><a href="#staff"  onclick="changePage(this)">Працівники</a></li>
+                <li><a href="#kid-list" onclick="changePage(this)">Учні</a></li>
+                <li><a href="#staff-list"  onclick="changePage(this)">Працівники</a></li>
                 <li><a href="#schedule" onclick="changePage(this)">Розклад</a></li>
                 <li><a href="#settings" onclick="changePage(this)">Налаштування</a></li>
-                <li><a href="#groupstype" onclick="changePage(this)">Гуртки</a></li>
-                <li><a href="#programstype" onclick="changePage(this)">Програми навчання</a></li>
+                <li><a href="#groups-type" onclick="changePage(this)">Гуртки</a></li>
+                <li><a href="#programs-type" onclick="changePage(this)">Програми навчання</a></li>
             </ul>
         </nav>
     </header>
