--- a/iframe-content/staff-list.html
+++ b/iframe-content/staff-list.html
@@ -36,7 +36,7 @@
                 
                 filteredData.forEach(emp => {
                     container.append(`
-                        <a href="YehorMovchan.github.io/iframe-content/staff.html?id=${emp.id}"><li><span><strong>${emp.name}</strong> - ${emp.position} | Зарплата: ${emp.payment} грн</span></li></a>
+                        <a href="https://yehormovchan.github.io/iframe-content/staff.html?id=${emp.id}"><li><span><strong>${emp.name}</strong> - ${emp.position} | Зарплата: ${emp.payment} грн</span></li></a>
                     `);
                     
                 });
