--- a/iframe-content/staff-list.html
+++ b/iframe-content/staff-list.html
@@ -37,12 +37,12 @@
                 filteredData.forEach(emp => {
                     container.append(`
                         <a href="https://yehormovchan.github.io/iframe-content/staff.html?id=${emp.id}">
-                            // <li>
-                                // <span>
-                                // <strong>${emp.name}</strong> - ${emp.position} | Зарплата: ${emp.payment} грн
-                                // </span>
-                            // </li>
-                        // </a>
+                            <li>
+                                <span>
+                                    <strong>${emp.name}</strong> - ${emp.position} | Зарплата: ${emp.payment} грн
+                                </span>
+                             </li>
+                         </a>
                     `);
                     
                 });
