--- a/iframe-content/group-attendance.html
+++ b/iframe-content/group-attendance.html
@@ -6,9 +6,9 @@
     <title>Відвідуваність гуртків</title>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://yehormovchan.github.io/static/script.js"></script>
     <script>
         $(document).ready(function() {
-            $(".request-error").hide()
             let urlParams = new URLSearchParams(window.location.search);
             let kidId = urlParams.get('id');
             let currentMonth = new Date().toISOString().slice(0, 7);
