--- a/iframe-content/parent.html
+++ b/iframe-content/parent.html
@@ -6,9 +6,9 @@
     <title>Інформація про батьків</title>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://yehormovchan.github.io/static/script.js"></script>
     <script>
         $(document).ready(function() {
-            $(".request-error").hide();
             let urlParams = new URLSearchParams(window.location.search);
             let kidId = urlParams.get('id');
 
