--- a/iframe-content/programs-type.html
+++ b/iframe-content/programs-type.html
@@ -6,6 +6,7 @@
     <title>Перелік гуртків</title>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://yehormovchan.github.io/static/script.js"></script>
     <script>
         $(document).ready(function() {
             $.ajax({
