--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Редагування розкладу</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://yehormovchan.github.io/static/script.js"></script>
   <script>
     $(document).ready(function() {
       var subjects = [];
