--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Адміністрування школи</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
+    <script src="https://yehormovchan.github.io/static/script.js"></script>
 </head>
 <body>
     <header>
