--- a/iframe-content/transactions.html
+++ b/iframe-content/transactions.html
@@ -73,6 +73,7 @@
         body{
             overflow-y: auto; 
             overflow-x: auto;
+            margin: 50px;
         }
         body::-webkit-scrollbar{
             display: inline;
