--- a/iframe-content/staff-attendance.html
+++ b/iframe-content/staff-attendance.html
@@ -11,6 +11,7 @@
         body{
             overflow-y: auto; 
             overflow-x: auto;
+            margin: 50px;
         }
         body::-webkit-scrollbar{
             display: inline;
