--- a/iframe-content/staff.html
+++ b/iframe-content/staff.html
@@ -58,7 +58,7 @@
         $(document).ready(function() {
             let urlParams = new URLSearchParams(window.location.search);
             let teacherId = urlParams.get("id");
-            $("#attendance").attr("src", `https://yehormovchan.github.io/iframe-content/staff-attendance.html?id=${teacherId}?salary=100`);
+            $("#attendance").attr("src", `https://yehormovchan.github.io/iframe-content/staff-attendance.html?id=${teacherId}&salary=100`);
             
             if (teacherId) {
                 $.getJSON(`http://localhost:8080/staff/${teacherId}`, function(teacher) {
